Accept and decline org invite endpoints + Swagger docs
