# internal/core/handlers/organizations/handlers.go
@@ -541,3 +541,150 @@ func MembersGet(organizationsService organizations.Service, usersService users.S
 		resp.OK(w, r, response{users})
 	}
 }
+
+// InviteValidatePost validates an invite and returns an organization profile on success.
+func InviteValidatePost(organizationsService organizations.Service) http.HandlerFunc {
+	type request struct {
+		Key string `json:"key" validate:"min=8,max=128"`
+	}
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx := r.Context()
+
+		userID, ok := ctx.Value(auth.KeyUserID).(int64)
+		if !ok {
+			resp.ServerError(w, r, resp.UnknownError)
+			return
+		}
+
+		organizationID, err := idctx.Get(r, "organizationID")
+		if err != nil {
+			return
+		}
+
+		inviteID, err := idctx.Get(r, "inviteID")
+		if err != nil {
+			return
+		}
+
+		req := request{}
+		err = parse.POST(w, r, &req)
+		if err != nil {
+			return
+		}
+
+		res, err := organizationsService.GetOrganizationFromInvite(ctx, organizationID, userID, inviteID, req.Key)
+		if err != nil {
+			switch err.(type) {
+			case *organizations.ErrInviteInvalid:
+				resp.NotFound(w, r, resp.APIError(err, nil))
+			case *organizations.ErrServerError:
+				resp.ServerError(w, r, resp.APIError(err, nil))
+			default:
+				resp.ServerError(w, r, resp.UnknownError)
+			}
+			return
+		}
+
+		resp.OK(w, r, res)
+	}
+}
+
+// InviteAcceptPost attempts to accept an invite.
+func InviteAcceptPost(organizationsService organizations.Service) http.HandlerFunc {
+	type request struct {
+		Key string `json:"key" validate:"min=8,max=128"`
+	}
+	type response struct {
+		Success bool `json:"success"`
+	}
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx := r.Context()
+
+		userID, ok := ctx.Value(auth.KeyUserID).(int64)
+		if !ok {
+			resp.ServerError(w, r, resp.UnknownError)
+			return
+		}
+
+		organizationID, err := idctx.Get(r, "organizationID")
+		if err != nil {
+			return
+		}
+
+		inviteID, err := idctx.Get(r, "inviteID")
+		if err != nil {
+			return
+		}
+
+		req := request{}
+		err = parse.POST(w, r, &req)
+		if err != nil {
+			return
+		}
+
+		err = organizationsService.AcceptInvite(ctx, organizationID, userID, inviteID, req.Key)
+		if err != nil {
+			switch err.(type) {
+			case *organizations.ErrInviteInvalid:
+				resp.NotFound(w, r, resp.APIError(err, nil))
+			case *organizations.ErrServerError:
+				resp.ServerError(w, r, resp.APIError(err, nil))
+			default:
+				resp.ServerError(w, r, resp.UnknownError)
+			}
+			return
+		}
+
+		resp.OK(w, r, response{true})
+	}
+}
+
+// InviteDeclinePost attempts to decline an invite.
+func InviteDeclinePost(organizationsService organizations.Service) http.HandlerFunc {
+	type request struct {
+		Key string `json:"key" validate:"min=8,max=128"`
+	}
+	type response struct {
+		Success bool `json:"success"`
+	}
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx := r.Context()
+
+		userID, ok := ctx.Value(auth.KeyUserID).(int64)
+		if !ok {
+			resp.ServerError(w, r, resp.UnknownError)
+			return
+		}
+
+		organizationID, err := idctx.Get(r, "organizationID")
+		if err != nil {
+			return
+		}
+
+		inviteID, err := idctx.Get(r, "inviteID")
+		if err != nil {
+			return
+		}
+
+		req := request{}
+		err = parse.POST(w, r, &req)
+		if err != nil {
+			return
+		}
+
+		err = organizationsService.DeclineInvite(ctx, organizationID, userID, inviteID, req.Key)
+		if err != nil {
+			switch err.(type) {
+			case *organizations.ErrInviteInvalid:
+				resp.NotFound(w, r, resp.APIError(err, nil))
+			case *organizations.ErrServerError:
+				resp.ServerError(w, r, resp.APIError(err, nil))
+			default:
+				resp.ServerError(w, r, resp.UnknownError)
+			}
+			return
+		}
+
+		resp.OK(w, r, response{true})
+	}
+}
